@@ -1,5 +1,11 @@
 > Fixed: Remote control arrow node captures mouse input
 > Fixed: Switching to manual mode doesn't work after timeline is full.
+> Fixed: remote control does not work if you click inside of the arrow (you have to click outside of the arrow, or very near the tip it seems).
+> Fixed: "Throwable" box should be labeled "Frictionless".
+> Fixed: Reset All does not return "Throwable" to default (off) state.
+> Fixed: "Throwable" checkbox should be moved to right above remote control.
+> Fixed: "Reset All" should be centered in the bottom of control panel.
+> Fixed: Changed "Recording" to "Record" in mode indicator
 
 # 1.20.27 (28186) Feb 5, 2009
 > Rewind works when in playback mode.
